# expense-bot-clean-architecture

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  interactor.py  pyproject.toml  ruff.toml
data/: users.json
src/: bot.py  config.py  exceptions.py  main.py
src/application/interactors/admin/: clear_others_expenses.py  manage_roles.py  view_bot_stats.py
src/application/interactors/user/: add_expense.py  add_expense_for_user.py  change_currency.py  change_daily_limit.py  (+7 more)
src/application/services/: period.py  stats_formatter.py
src/db/: base.py  models.py
src/domain/entities/: expense.py  role.py  user.py  user_settings.py
src/domain/repositories/: expense_repository.py  user_repository.py  user_settings_repository.py
src/handlers/: __init__.py  add_handler.py  admin_handler.py  clear_handler.py  settings_handler.py  start_handler.py
src/infrastructure/: config.py
src/infrastructure/logger/: logging_prod.py
src/infrastructure/providers/: config.py  config_provider.py  container.py  interactor.py  interactor_provider.py  logger.py  logger_provider.py  main.py  main_provider.py  repository_provider.py  repostiory.py  service.py
src/infrastructure/repositories/: json_expense_repository.py  json_user_repository.py  json_user_settings_repository.py
src/logger/: logging_dev.py
src/presentation/handlers/: __init__.py  add.py  add_handler.py  admin.py  clear.py  help.py  help_handler.py  settings.py  settings_handler.py  stats.py  stats_handler.py
src/states/: admin_state.py  settings_state.py
src/storage/: json_storage.py
